feat: add basic HTML layout

--- a/index.html
+++ b/index.html
@@ -15,13 +15,55 @@
   </style>
 </head>
 <body>
+  <main>
+    <div class="dashboard">
 
-  Report for
-  Jeremy Robson
+    <aside class="dashboard__user-panel">
+      <div class="dashboard__user">
+        <img src="./images/image-jeremy.png" alt="Jeremy Robson">
+        <div>
+          <p class="dashboard__user-label">Report for</p>
+          <h1 class="dashboard__user-name">Jeremy Robson</h1>
+        </div>
+      </div>
+      <nav class="dashboard__menu">
+        <button type="button" aria-pressed="true">Daily</button>
+        <button type="button" aria-pressed="false">Weekly</button>
+        <button type="button" aria-pressed="false">Monthly</button>
+      </nav>
+    </aside>
 
-  Daily
-  Weekly
-  Monthly
+    <div class="dashboard__grid">
+
+      <!-- Work -->
+      <article class="time-card">
+        <div class="time-card__tag">
+          <img src="./images//icon-work.svg" alt="">
+        </div>
+        <div class="time-card__info">
+          <header class="time-card__category">
+            <h2>Work</h2>
+            <button aria-label="Options">
+              <img src="./images/icon-ellipsis.svg" alt="">
+            </button>
+          </header>
+          <div class="time-card__time">32hrs</div>
+          <div class="time-card__past-time">Last week - 36hrs</div>
+        </div>
+      </article>
+
+
+    </div>
+    </div>
+  </main>
+
+
+
+
+  
+  
+  
+  
 
   Work
   5hrs <!-- daily -->
