style: add style to time-card

--- a/index.html
+++ b/index.html
@@ -32,22 +32,23 @@
     <div class="dashboard__grid" role="tabpanel">
 
       <!-- Work -->
-      <article class="time-card">
+      <article class="time-card time-card--work">
         <div class="time-card__tag">
           <img src="./assets/images/icon-work.svg" alt="">
         </div>
         <div class="time-card__info">
-          <header class="time-card__category">
-            <h2>Work</h2>
-            <button aria-label="Options">
+          <header class="time-card__header">
+            <h2 class="time-card__category">Work</h2>
+            <button class="time-card__options-button" aria-label="Options">
               <img src="./assets/images/icon-ellipsis.svg" alt="">
             </button>
           </header>
-          <div class="time-card__time">32hrs</div>
-          <div class="time-card__past-time">Last week - 36hrs</div>
+          <div class="time-card__time-container">
+            <div class="time-card__time">32hrs</div>
+            <div class="time-card__past-time">Last week - 36hrs</div>
+          </div>
         </div>
       </article>
-
 
     </div>
     </div>
