feat: load data from data.json and render all time cards dynamically

--- a/index.html
+++ b/index.html
@@ -32,34 +32,7 @@
     </aside>
 
     <div id="dashboardGrid" class="dashboard__grid dashboard__grid--weekly" role="tabpanel">
-
-      <!-- Work -->
-      <article class="time-card time-card--work">
-        <div class="time-card__tag">
-          <img src="./assets/images/icon-work.svg" alt="">
-        </div>
-        <div class="time-card__info">
-          <header class="time-card__header">
-            <h2 class="time-card__category">Work</h2>
-            <button class="time-card__options-button" aria-label="Options">
-              <img src="./assets/images/icon-ellipsis.svg" alt="">
-            </button>
-          </header>
-          <div class="time-card__time-container">
-            <div class="time-card__time">
-              <span data-time="daily">5hrs</span>
-              <span data-time="weekly">32hrs</span>
-              <span data-time="monthly">103hrs</span>
-            </div>
-            <div class="time-card__past-time">
-              <span data-time="daily">Yesterday - 7hrs</span>
-              <span data-time="weekly">Last week - 36hrs</span>
-              <span data-time="monthly">Last month - 128hrs</span>
-            </div>
-          </div>
-        </div>
-      </article>
-
+      <!-- Time Cards -->
     </div>
     </div>
   </main>
