--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       </div>
       <nav class="dashboard__menu" role="tablist">
         <button class="dashboard__menu-button" role="tab" type="button" data-mode="daily" aria-selected="false">Daily</button>
-        <button class="dashboard__menu-button" role="tab" type="button" data-mode="weekly" aria-selected="true">Weekly</button>
+        <button class="dashboard__menu-button" role="tab" type="button" data-mode="weekly" aria-selected="false">Weekly</button>
         <button class="dashboard__menu-button" role="tab" type="button" data-mode="monthly" aria-selected="false">Monthly</button>
       </nav>
     </aside>
 
-    <div id="dashboardGrid" class="dashboard__grid dashboard__grid--weekly" role="tabpanel">
+    <div id="dashboardGrid" class="dashboard__grid" role="tabpanel">
       <!-- Time Cards -->
     </div>
     </div>
