--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
           <h1 class="dashboard__user-name">Jeremy Robson</h1>
         </div>
       </div>
-      <nav class="dashboard__menu" role="tablist">
-        <button class="dashboard__menu-button" role="tab" type="button" data-mode="daily" aria-selected="false" aria-controls="dashboardGrid">Daily</button>
-        <button class="dashboard__menu-button" role="tab" type="button" data-mode="weekly" aria-selected="false" aria-controls="dashboardGrid">Weekly</button>
-        <button class="dashboard__menu-button" role="tab" type="button" data-mode="monthly" aria-selected="false" aria-controls="dashboardGrid">Monthly</button>
+      <nav class="dashboard__menu">
+        <button class="dashboard__menu-button" type="button" data-mode="daily" aria-pressed="false" >Daily</button>
+        <button class="dashboard__menu-button" type="button" data-mode="weekly" aria-pressed="false" >Weekly</button>
+        <button class="dashboard__menu-button" type="button" data-mode="monthly" aria-pressed="false" >Monthly</button>
       </nav>
     </aside>
 
-    <section id="dashboardGrid" class="dashboard__grid" role="tabpanel">
+    <section id="dashboardGrid" class="dashboard__grid">
       <!-- Time Cards -->
     </section>
     </div>
